# Arista-RAG-Pipeline

./: .env  .gitignore  README.md  chatbot.py  config.py  example.py  image_hallucination_check.py  ingestion.py  main.py  pyproject.toml  rag.py  requirements.txt  scrape.py  test_ingestion.py  vdb.py
chroma_db/: chroma.sqlite3
documents/: AI-Network-WP.txt
