[project]
name = "aristarag"
version = "0.1.0"
description = ""
authors = [
    {name = "Neil Thomas",email = "neilthomas@berkeley.edu"}
]

readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "llama-cloud-services (>=0.6.7,<0.7.0)",
    "llama-parse (>=0.6.4.post1,<0.7.0)",
    "llama-index-core (>=0.12.25,<0.13.0)",
    "llama-index-embeddings-gemini (>=0.3.2,<0.4.0)",
    "llama-index-llms-gemini (>=0.4.12,<0.5.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "typing-extensions (>=4.12.0,<5.0.0)",
    "python-multipart (>=0.0.9,<0.1.0)",
    "fastapi (>=0.110.0,<0.111.0)",
    "uvicorn (>=0.27.1,<0.28.0)",
    "pydantic (>=2.10.0,<3.0.0)",
    "pydantic-settings (>=2.2.1,<3.0.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
